# aria-inference

./: README.md  pyproject.toml
src/aria_inference/: __init__.py  audio.py  birdnet_runtime.py  cli.py  ensemble.py  fusion_model.py  model_store.py  perch_runtime.py
tests/: test_core.py
