[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aria-inference"
version = "0.1.0"
description = "Full ARIA inference: BirdNET + PERCH v2 + Fusion for bird species detection"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [
  { name = "ML4Biodiversity" }
]
keywords = ["bioacoustics", "bird", "species", "detection", "BirdNET", "PERCH"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "birdnetlib>=0.15",
  "perch-hoplite>=0.1",
  "tensorflow>=2.20",
  "torch>=2.2,<3",
  "numpy>=2.0,<2.1",
  "librosa>=0.10",
  "soundfile>=0.13",
  "pandas>=2.2",
  "click>=8.1,<9",
  "tqdm>=4.66,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "build",
  "twine",
]

[project.scripts]
aria-inference = "aria_inference.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
